# Apollo-Blue

./: README.md
4011_arrow_v1/: 4011_arrow_v1.ino
4011_ibeacon_v4/: 4011_ibeacon_v4.ino
4011_ibeacon_v5/: 4011_ibeacon_v5.ino
4011_ibeacon_v6/: 4011_ibeacon_config.h  4011_ibeacon_v6.ino
python/AWR1843_sensor/: combined_data.npz  gesture_model_training.py  gesture_recognition_model.keras  main.py  package_gesture_data_npz.py  predict_window.py  read_sensor.py  sensor_data_collector.py
python/AWR1843_sensor/Logs/train/: events.out.tfevents.1715732476.tom-B550M-S2H.48604.0.v2
python/AWR1843_sensor/Logs/validation/: events.out.tfevents.1715732477.tom-B550M-S2H.48604.1.v2
python/AWR1843_sensor/gesture_data/down/: 1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  30.npy  31.npy  32.npy  33.npy  34.npy  35.npy  36.npy  37.npy  38.npy  39.npy  4.npy  40.npy  41.npy  42.npy  43.npy  44.npy  45.npy  (+50 more)
python/AWR1843_sensor/gesture_data/left/: 1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  (+82 more)
python/pc_gui/: main.py
python/sensor/: con2d_v3.cfg  model_v4.h5  readData_AWR1843.py  readData_AWR1843_data_collection.py  readData_AWR1843_predict.py  train_model_on_collected_data.py
zephyr_code/apps/nrf52840/: CMakeLists.txt  prj.conf
zephyr_code/apps/nrf52840/src/: main.c
zephyr_code/include/: nrf52840_ibeacon_adv.h  nrf52840_leds.h  nrf52840_uart.h
zephyr_code/mylib/: nrf52840_ibeacon_adv.c  nrf52840_leds.c  nrf52840_uart.c
(+968 files in other folders)
